--- a/loadbalancerfull.yaml
+++ b/loadbalancerfull.yaml
@@ -39,7 +39,9 @@
               - listener_port is defined
               - listener_port | int > 0
               - listener_port | int < 65536
-            fail_msg: "ERRORE - Variabili richieste mancanti: lb_name, lb_subnet, listener_port"
+            fail_msg: |
+              ❌ ERRORE: Variabili richieste mancanti!
+              Richieste: lb_name, lb_subnet, listener_port
 
         # ========================================
         # NOTIFICA 1: INIZIO CREAZIONE
@@ -55,7 +57,7 @@
               action: "create"
               resource:
                 level: "info"
-                message: "Avvio creazione Load Balancer L4 {{ lb_name }} - Subnet {{ lb_subnet }} - Listener {{ listener_protocol }}:{{ listener_port }}"
+                message: "🚀 Avvio creazione Load Balancer L4 '{{ lb_name }}' | Subnet: {{ lb_subnet }} | Listener: {{ listener_protocol }}:{{ listener_port }}"
                 subject_type: "User"
                 subject_id: "{{ manageiq_user_id }}"
             body_format: json
@@ -74,15 +76,29 @@
         # ========================================
         - name: Log initial configuration
           debug:
-            msg:
-              - "=========================================="
-              - "CONFIGURAZIONE LOAD BALANCER L4"
-              - "=========================================="
-              - "Nome: {{ lb_name }}"
-              - "Subnet VIP: {{ lb_subnet }}"
-              - "Listener: {{ listener_protocol }}:{{ listener_port }}"
-              - "Pool Algorithm: {{ pool_algorithm }}"
-              - "Backend Servers: {{ backend_servers | default('Nessuno - pool vuoto') }}"
+            msg: |
+              ╔═══════════════════════════════════════════════════════╗
+              ║     CONFIGURAZIONE LOAD BALANCER L4 - OPENSTACK      ║
+              ╚═══════════════════════════════════════════════════════╝
+              
+              📋 LOAD BALANCER:
+              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+              Nome:                  {{ lb_name }}
+              IP Address:            {{ lb_ip_address | default('Auto-assign') }}
+              Subnet VIP:            {{ lb_subnet }}
+              
+              🎧 LISTENER:
+              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+              Protocollo:            {{ listener_protocol }}
+              Porta:                 {{ listener_port }}
+              
+              🏊 POOL:
+              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+              Algoritmo:             {{ pool_algorithm }}
+              
+              🖥️  BACKEND SERVERS:
+              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+              Backend Servers:       {{ backend_servers | default('Nessuno - pool vuoto') }}
 
         # ========================================
         # OPTIONAL CLEANUP
@@ -119,7 +135,7 @@
 
         - name: Log Load Balancer creation
           debug:
-            msg: "Load Balancer {{ lb_name }} creato - ID: {{ lb_id }} - VIP: {{ lb_vip_address }}"
+            msg: "✅ Load Balancer '{{ lb_name }}' creato! ID: {{ lb_id }}, VIP: {{ lb_vip_address }}"
 
         # ========================================
         # NOTIFICA 2: LOAD BALANCER CREATO
@@ -135,7 +151,7 @@
               action: "create"
               resource:
                 level: "info"
-                message: "Load Balancer {{ lb_name }} creato - VIP {{ lb_vip_address }} - ID {{ lb_id }}"
+                message: "✅ Load Balancer '{{ lb_name }}' creato | VIP: {{ lb_vip_address }} | ID: {{ lb_id }}"
                 subject_type: "User"
                 subject_id: "{{ manageiq_user_id }}"
             body_format: json
@@ -169,7 +185,35 @@
 
         - name: Log Listener creation
           debug:
-            msg: "Listener {{ listener_name }} creato - Protocollo {{ listener_protocol }} - Porta {{ listener_port }}"
+            msg: "✅ Listener '{{ listener_name }}' creato! Protocollo: {{ listener_protocol }}, Porta: {{ listener_port }}"
+
+        # ========================================
+        # CONFIGURE LISTENER ADVANCED SETTINGS (Optional via CLI)
+        # ========================================
+        - name: Configure Listener connection limit
+          when: 
+            - listener_connection_limit is defined
+            - listener_connection_limit | int != -1
+          block:
+            - name: Set connection limit on listener
+              command: >
+                openstack loadbalancer listener set {{ listener_name }}
+                --connection-limit {{ listener_connection_limit | int }}
+              register: listener_limit_set
+              ignore_errors: yes
+
+        - name: Configure Listener allowed CIDRs
+          when: 
+            - listener_allowed_cidrs is defined
+            - listener_allowed_cidrs != '0.0.0.0/0'
+            - listener_allowed_cidrs | length > 0
+          block:
+            - name: Set allowed CIDRs on listener
+              command: >
+                openstack loadbalancer listener set {{ listener_name }}
+                --allowed-cidr {{ listener_allowed_cidrs }}
+              register: listener_cidrs_set
+              ignore_errors: yes
 
         # ========================================
         # NOTIFICA 3: LISTENER CREATO
@@ -185,7 +229,7 @@
               action: "create"
               resource:
                 level: "info"
-                message: "Listener {{ listener_name }} configurato - Protocollo {{ listener_protocol }} - Porta {{ listener_port }}"
+                message: "✅ Listener '{{ listener_name }}' configurato | Protocollo: {{ listener_protocol }} | Porta: {{ listener_port }}"
                 subject_type: "User"
                 subject_id: "{{ manageiq_user_id }}"
             body_format: json
@@ -200,7 +244,7 @@
           ignore_errors: yes
 
         # ========================================
-        # CREATE POOL - SEMPLIFICATO SENZA SESSION PERSISTENCE
+        # CREATE POOL (Always)
         # ========================================
         - name: Create Pool
           openstack.cloud.lb_pool:
@@ -216,7 +260,21 @@
 
         - name: Log Pool creation
           debug:
-            msg: "Pool {{ pool_name }} creato con successo - Algoritmo {{ pool_algorithm }}"
+            msg: "✅ Pool '{{ pool_name }}' creato! Algoritmo: {{ pool_algorithm }}"
+
+        # Session Persistence (se specificato e diverso da None)
+        - name: Configure Session Persistence
+          when: 
+            - pool_session_persistence is defined
+            - pool_session_persistence != 'None'
+            - pool_session_persistence | length > 0
+          block:
+            - name: Set session persistence on pool
+              command: >
+                openstack loadbalancer pool set {{ pool_name }}
+                --session-persistence type={{ pool_session_persistence }}
+              register: persistence_set
+              ignore_errors: yes
 
         # ========================================
         # PARSE AND ADD POOL MEMBERS (Optional - 0 to N)
@@ -255,7 +313,7 @@
 
             - name: Log members added
               debug:
-                msg: "Aggiunti {{ pool_members_list | default([]) | length }} membri al pool {{ pool_name }}"
+                msg: "✅ Aggiunti {{ pool_members_list | default([]) | length }} membri al pool '{{ pool_name }}'"
               when: pool_members_list is defined
 
             # ========================================
@@ -272,7 +330,7 @@
                   action: "create"
                   resource:
                     level: "info"
-                    message: "Pool {{ pool_name }} configurato - Algoritmo {{ pool_algorithm }} - Membri {{ pool_members_list | default([]) | length }}"
+                    message: "✅ Pool '{{ pool_name }}' configurato | Algoritmo: {{ pool_algorithm }} | Membri: {{ pool_members_list | default([]) | length }}"
                     subject_type: "User"
                     subject_id: "{{ manageiq_user_id }}"
                 body_format: json
@@ -291,7 +349,7 @@
           when: 
             - backend_servers is not defined or backend_servers | length == 0
           debug:
-            msg: "Pool creato senza membri - Potrai aggiungerne in seguito"
+            msg: "ℹ️  Pool creato senza membri. Potrai aggiungerne in seguito tramite OpenStack."
 
         # ========================================
         # CREATE HEALTH MONITOR (Optional)
@@ -326,7 +384,7 @@
 
             - name: Log Health Monitor creation
               debug:
-                msg: "Health Monitor {{ monitor_name }} creato - Tipo {{ monitor_type | default('TCP') }}"
+                msg: "✅ Health Monitor '{{ monitor_name }}' creato! Tipo: {{ monitor_type | default('TCP') }}"
 
             # ========================================
             # NOTIFICA 5: HEALTH MONITOR CREATO
@@ -342,7 +400,7 @@
                   action: "create"
                   resource:
                     level: "info"
-                    message: "Health Monitor {{ monitor_name }} configurato - Tipo {{ monitor_type | default('TCP') }} - Delay {{ monitor_delay | default(5) }}s"
+                    message: "✅ Health Monitor '{{ monitor_name }}' configurato | Tipo: {{ monitor_type | default('TCP') }} | Delay: {{ monitor_delay | default(5) }}s"
                     subject_type: "User"
                     subject_id: "{{ manageiq_user_id }}"
                 body_format: json
@@ -384,7 +442,7 @@
 
             - name: Log Floating IP assignment
               debug:
-                msg: "Floating IP {{ lb_floating_ip }} assegnato al Load Balancer"
+                msg: "✅ Floating IP {{ lb_floating_ip }} assegnato al Load Balancer"
 
             # ========================================
             # NOTIFICA 6: FLOATING IP ASSEGNATO
@@ -400,7 +458,7 @@
                   action: "create"
                   resource:
                     level: "info"
-                    message: "Floating IP {{ lb_floating_ip }} assegnato al Load Balancer {{ lb_name }}"
+                    message: "✅ Floating IP {{ lb_floating_ip }} assegnato al Load Balancer '{{ lb_name }}'"
                     subject_type: "User"
                     subject_id: "{{ manageiq_user_id }}"
                 body_format: json
@@ -419,14 +477,18 @@
         # ========================================
         - name: Generate final summary
           debug:
-            msg:
-              - "=========================================="
-              - "LOAD BALANCER CREATO CON SUCCESSO"
-              - "=========================================="
-              - "Nome: {{ lb_name }}"
-              - "VIP: {{ lb_vip_address }}"
-              - "Listener: {{ listener_protocol }}:{{ listener_port }}"
-              - "Pool: {{ pool_algorithm }}"
+            msg: |
+              ╔═══════════════════════════════════════════════════════════════════╗
+              ║          ✅✅✅ LOAD BALANCER CREATO CON SUCCESSO ✅✅✅          ║
+              ╚═══════════════════════════════════════════════════════════════════╝
+              
+              📋 INFORMAZIONI:
+              Nome:     {{ lb_name }}
+              VIP:      {{ lb_vip_address }}
+              {% if lb_floating_ip is defined %}Floating: {{ lb_floating_ip }}{% endif %}
+              Listener: {{ listener_protocol }}:{{ listener_port }}
+              Pool:     {{ pool_algorithm }}
+              {% if pool_members_list is defined %}Membri:   {{ pool_members_list | length }}{% endif %}
 
         # ========================================
         # NOTIFICA 7: SUCCESSO FINALE
@@ -442,7 +504,7 @@
               action: "create"
               resource:
                 level: "success"
-                message: "Load Balancer L4 {{ lb_name }} completato - VIP {{ lb_vip_address }} - {{ listener_protocol }}:{{ listener_port }}"
+                message: "✅ Load Balancer L4 '{{ lb_name }}' completato | VIP: {{ lb_vip_address }}{% if lb_floating_ip is defined %} | FIP: {{ lb_floating_ip }}{% endif %} | {{ listener_protocol }}:{{ listener_port }}"
                 subject_type: "User"
                 subject_id: "{{ manageiq_user_id }}"
             body_format: json
@@ -471,7 +533,7 @@
               action: "create"
               resource:
                 level: "error"
-                message: "Creazione Load Balancer L4 {{ lb_name }} fallita - Errore {{ ansible_failed_task.name | default('operazione sconosciuta') }}"
+                message: "❌ Creazione Load Balancer L4 '{{ lb_name }}' fallita! | Errore durante: {{ ansible_failed_task.name | default('operazione sconosciuta') }}"
                 subject_type: "User"
                 subject_id: "{{ manageiq_user_id }}"
             body_format: json
@@ -493,8 +555,8 @@
 
         - name: Log cleanup
           debug:
-            msg: "Errore rilevato - Risorse parzialmente create eliminate"
+            msg: "⚠️  Errore rilevato. Risorse parzialmente create eliminate."
 
         - name: Fail the playbook
           fail:
-            msg: "Creazione Load Balancer L4 fallita"
+            msg: "Creazione Load Balancer L4 fallita: {{ ansible_failed_task.name | default('operazione sconosciuta') }}"
